osha.policy Changelog
=====================

1.3.36 (unreleased)
-------------------

- added increase for resource registry cache duration, work for #3204
  [pilz]
- generateHW2010PDF: we need to escape the company name, since pure & characters
  will cause reportlab to puke, fixes #3213 [thomasw]

1.3.35 (2011-05-04)
-------------------

- Added dateToBeConfirmed field to the calendar_eventprovider #2341
  [deroiste]

1.3.34 (2011-04-12)
-------------------

- Added a BrowserView getHostname, so that we can show the hostname in the
  default error page [thomasw]
- Overriding switchLanguage from the PloneLanguageTool so that a proper
  err 400 (Bad Request) is returned when no paramater set_language is passed
  [thomasw]

1.3.33 (2011-03-14)
-------------------

- In calendar_eventprovider: don't use key "set_language" for generating a
  catalog query, fixes #2725 [thomasw]
- replaced getTranslationService().translate with zope.i18n.translate in charter
  PDF generation, fixes #2749 [thomasw]


1.3.32 (2011-02-21)
-------------------

- Remove the SpeakerView override, it's been backported to slc.seminarportal.
  [jcbrand]
- replaced getTranslationService().translate with zope.i18n.translate [thomasw]

1.3.31 (2011-01-25)
-------------------

- REVERTING changes done in 1.3.29 (related to slc.seminarportal). They are not
  compatible with the current version of the EU-OSHA site yet
  [thomasw]

1.3.30 (2011-01-25)
-------------------

- Removed patch gocept_linkchecker as requested by gocept, since they
  have updated the linkchecker accordingly
  [thomasw]


1.3.29 (2011-01-12)
-------------------

- Removed the categories vocabulary. It is now defined in slc.seminarportal
  because it's used their for the Seminars portlet. No use in having it twice.
  [jcbrand]
- Remove the SpeakerView override, it's been backported to slc.seminarportal.
  [jcbrand]


1.3.28 (2010-11-22)
-------------------

- ATEventProvider.gather_events():